Removing file base db, adding in the config info on the current db

--- a/src/api/appsettings.Development.json
+++ b/src/api/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DataProvider": "File"
+  "AllowedHosts": "*",
+  "DataProvider": "Sqlite",
+  "LabEnvironment": {
+    "Enabled": true,
+    "Endpoints": [
+      { "Name": "Primary Gateway", "Url": "https://lab-gateway-1.hackathon.dev" },
+      { "Name": "Backup Gateway", "Url": "https://lab-gateway-2.hackathon.dev" }
+    ]
+  }
 }
+
