--- a/src/api/appsettings.json
+++ b/src/api/appsettings.json
@@ -5,13 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "DataProvider": "File",
-  "LabEnvironment": {
-    "Enabled": true,
-    "Endpoints": [
-      { "Name": "Primary Gateway", "Url": "https://lab-gateway-1.hackathon.dev" },
-      { "Name": "Backup Gateway", "Url": "https://lab-gateway-2.hackathon.dev" }
-    ]
-  }
+  "DataProvider": "Sqlite"
 }
+
